modules/lib/dependencies/usrsctp/cobalt_sctp_shim.h

#define COBALT_SCTP_BAD_PARAM   (-1)
#define COBALT_SCTP_NOMEM       (-2)
#define COBALT_SCTP_FAIL        (-3)
/**
 * Enables or disables Nagle batching on the socket (the SCTP_NODELAY option).
 *
 * @param sock the socket handle from cobalt_sctp_socket_create.
 * @param on   non-zero to disable batching (enable NODELAY), zero to allow it.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL socket,
 *         COBALT_SCTP_FAIL if usrsctp_setsockopt returned an error.
 */
int32_t cobalt_sctp_set_nodelay(void *sock, int32_t on);
/**
 * Enables or disables message fragmentation on the socket (the
 * SCTP_DISABLE_FRAGMENTS option).
 *
 * @param sock the socket handle from cobalt_sctp_socket_create.
 * @param on   non-zero to disable fragmentation, zero to allow it.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL socket,
 *         COBALT_SCTP_FAIL if usrsctp_setsockopt returned an error.
 */
int32_t cobalt_sctp_set_disable_fragments(void *sock, int32_t on);
/**
 * Sets the initial stream and handshake parameters (the SCTP_INITMSG option).
 *
 * The wrapper builds an sctp_initmsg C-side from the four counts and applies it.
 * A value of 0 for attempts or timeout leaves usrsctp's default in force.
 *
 * @param sock         the socket handle from cobalt_sctp_socket_create.
 * @param numOstreams  the requested number of outbound streams.
 * @param maxInstreams the maximum number of inbound streams.
 * @param maxAttempts  the maximum INIT retransmission attempts, or 0 for default.
 * @param maxInitTimeo the maximum INIT timeout in milliseconds, or 0 for default.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL socket,
 *         COBALT_SCTP_FAIL if usrsctp_setsockopt returned an error.
 */
int32_t cobalt_sctp_set_initmsg(void *sock, int32_t numOstreams, int32_t maxInstreams,
                                int32_t maxAttempts, int32_t maxInitTimeo);
/**
 * Subscribes to or unsubscribes from association-change notifications (an
 * SCTP_EVENT subscription for SCTP_ASSOC_CHANGE).
 *
 * The wrapper builds an sctp_event C-side for the SCTP_ASSOC_CHANGE type and
 * applies it. The subscribed notification is delivered to the receive callback
 * with its isNotification argument set, carrying the handshake completion or
 * failure state.
 *
 * @param sock the socket handle from cobalt_sctp_socket_create.
 * @param on   non-zero to subscribe, zero to unsubscribe.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL socket,
 *         COBALT_SCTP_FAIL if usrsctp_setsockopt returned an error.
 */
int32_t cobalt_sctp_subscribe_assoc_change(void *sock, int32_t on);
/**
 * Switches the socket between non-blocking and blocking mode.
 *
 * Forwards to usrsctp_set_non_blocking. The association path requires
 * non-blocking mode so the single-threaded lock model does not deadlock on the
 * WebRTC simultaneous-open handshake.
 *
 * @param sock the socket handle from cobalt_sctp_socket_create.
 * @param on   non-zero for non-blocking, zero for blocking.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL socket,
 *         COBALT_SCTP_FAIL if usrsctp_set_non_blocking returned an error.
 */
int32_t cobalt_sctp_set_non_blocking(void *sock, int32_t on);
/**
 * Closes a socket created by cobalt_sctp_socket_create and frees its handle.
 *
 * Forwards to usrsctp_close on the wrapped socket and frees the context. Must be
 * called at most once per handle. A NULL handle is ignored and reported as
 * success. The caller must deregister the conn id before this call so any
 * in-flight conn-output callbacks drain first.
 *
 * @param sock the socket handle, or NULL.
 * @return COBALT_SCTP_OK.
 */
int32_t cobalt_sctp_close(void *sock);