modules/lib/src/main/java/com/github/auties00/cobalt/calls2/net/transport/sctp/bindings/CobaltSctp.java


    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_nodelay(void *sock, int32_t on)
     * }
     */
    public static int cobalt_sctp_set_nodelay(MemorySegment sock, int on) {
        var mh$ = cobalt_sctp_set_nodelay.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_set_nodelay", sock, on);
            }
            return (int)mh$.invokeExact(sock, on);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_set_disable_fragments {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_set_disable_fragments");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_disable_fragments(void *sock, int32_t on)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_set_disable_fragments$descriptor() {
        return cobalt_sctp_set_disable_fragments.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_disable_fragments(void *sock, int32_t on)
     * }
     */
    public static MethodHandle cobalt_sctp_set_disable_fragments$handle() {
        return cobalt_sctp_set_disable_fragments.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_disable_fragments(void *sock, int32_t on)
     * }
     */
    public static MemorySegment cobalt_sctp_set_disable_fragments$address() {
        return cobalt_sctp_set_disable_fragments.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_disable_fragments(void *sock, int32_t on)
     * }
     */
    public static int cobalt_sctp_set_disable_fragments(MemorySegment sock, int on) {
        var mh$ = cobalt_sctp_set_disable_fragments.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_set_disable_fragments", sock, on);
            }
            return (int)mh$.invokeExact(sock, on);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_set_initmsg {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_set_initmsg");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_initmsg(void *sock, int32_t numOstreams, int32_t maxInstreams, int32_t maxAttempts, int32_t maxInitTimeo)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_set_initmsg$descriptor() {
        return cobalt_sctp_set_initmsg.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_initmsg(void *sock, int32_t numOstreams, int32_t maxInstreams, int32_t maxAttempts, int32_t maxInitTimeo)
     * }
     */
    public static MethodHandle cobalt_sctp_set_initmsg$handle() {
        return cobalt_sctp_set_initmsg.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_initmsg(void *sock, int32_t numOstreams, int32_t maxInstreams, int32_t maxAttempts, int32_t maxInitTimeo)
     * }
     */
    public static MemorySegment cobalt_sctp_set_initmsg$address() {
        return cobalt_sctp_set_initmsg.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_initmsg(void *sock, int32_t numOstreams, int32_t maxInstreams, int32_t maxAttempts, int32_t maxInitTimeo)
     * }
     */
    public static int cobalt_sctp_set_initmsg(MemorySegment sock, int numOstreams, int maxInstreams, int maxAttempts, int maxInitTimeo) {
        var mh$ = cobalt_sctp_set_initmsg.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_set_initmsg", sock, numOstreams, maxInstreams, maxAttempts, maxInitTimeo);
            }
            return (int)mh$.invokeExact(sock, numOstreams, maxInstreams, maxAttempts, maxInitTimeo);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_subscribe_assoc_change {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_subscribe_assoc_change");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_subscribe_assoc_change(void *sock, int32_t on)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_subscribe_assoc_change$descriptor() {
        return cobalt_sctp_subscribe_assoc_change.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_subscribe_assoc_change(void *sock, int32_t on)
     * }
     */
    public static MethodHandle cobalt_sctp_subscribe_assoc_change$handle() {
        return cobalt_sctp_subscribe_assoc_change.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_subscribe_assoc_change(void *sock, int32_t on)
     * }
     */
    public static MemorySegment cobalt_sctp_subscribe_assoc_change$address() {
        return cobalt_sctp_subscribe_assoc_change.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_subscribe_assoc_change(void *sock, int32_t on)
     * }
     */
    public static int cobalt_sctp_subscribe_assoc_change(MemorySegment sock, int on) {
        var mh$ = cobalt_sctp_subscribe_assoc_change.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_subscribe_assoc_change", sock, on);
            }
            return (int)mh$.invokeExact(sock, on);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_set_non_blocking {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_set_non_blocking");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_non_blocking(void *sock, int32_t on)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_set_non_blocking$descriptor() {
        return cobalt_sctp_set_non_blocking.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_non_blocking(void *sock, int32_t on)
     * }
     */
    public static MethodHandle cobalt_sctp_set_non_blocking$handle() {
        return cobalt_sctp_set_non_blocking.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_non_blocking(void *sock, int32_t on)
     * }
     */
    public static MemorySegment cobalt_sctp_set_non_blocking$address() {
        return cobalt_sctp_set_non_blocking.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_non_blocking(void *sock, int32_t on)
     * }
     */
    public static int cobalt_sctp_set_non_blocking(MemorySegment sock, int on) {
        var mh$ = cobalt_sctp_set_non_blocking.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_set_non_blocking", sock, on);
            }
            return (int)mh$.invokeExact(sock, on);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_close(void *sock)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_close$descriptor() {
        return cobalt_sctp_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_close(void *sock)
     * }
     */
    public static MethodHandle cobalt_sctp_close$handle() {
        return cobalt_sctp_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_close(void *sock)
     * }
     */
    public static MemorySegment cobalt_sctp_close$address() {
        return cobalt_sctp_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_close(void *sock)
     * }
     */
    public static int cobalt_sctp_close(MemorySegment sock) {
        var mh$ = cobalt_sctp_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_close", sock);
            }
            return (int)mh$.invokeExact(sock);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    private static final int COBALT_SCTP_BAD_PARAM = (int)-1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_SCTP_BAD_PARAM -1
     * }
     */
    public static int COBALT_SCTP_BAD_PARAM() {
        return COBALT_SCTP_BAD_PARAM;
    }
    private static final int COBALT_SCTP_NOMEM = (int)-2L;
    /**
     * {@snippet lang=c :
     * #define COBALT_SCTP_NOMEM -2
     * }
     */
    public static int COBALT_SCTP_NOMEM() {
        return COBALT_SCTP_NOMEM;
    }
    private static final int COBALT_SCTP_FAIL = (int)-3L;
    /**
     * {@snippet lang=c :
     * #define COBALT_SCTP_FAIL -3
     * }
     */
    public static int COBALT_SCTP_FAIL() {
        return COBALT_SCTP_FAIL;
    }
}

